# Build-with-AI-Code-for-Communities

./: README.md
NAME/: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  start.bat
NAME/apps/ai-service/: main.py  pyproject.toml  requirements.txt
NAME/apps/ai-service/app/: main.py
NAME/apps/ai-service/app/core/: config.py
NAME/apps/ai-service/app/forecasting/: forecasting.py
NAME/apps/ai-service/app/medicine_matcher/: matcher.py
NAME/apps/ai-service/app/nlp/: parser.py
NAME/apps/api/: requirements.txt
NAME/apps/api/app/: main.py
NAME/apps/api/app/api/v1/: alerts.py  auth.py  dashboard.py  forecast.py  match.py  query.py  stock.py  transfer.py  whatsapp.py
NAME/apps/api/app/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py  ratelimit.py  security.py
NAME/apps/api/app/models/: models.py
NAME/apps/api/app/schemas/: schemas.py
NAME/apps/event-bus/: bus.py
NAME/apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
NAME/apps/web/src/: middleware.ts
NAME/apps/web/src/app/: layout.tsx  page.tsx
NAME/apps/web/src/app/ai/: page.tsx
NAME/apps/web/src/app/analytics/: page.tsx
NAME/apps/web/src/app/dashboard/: page.tsx
NAME/apps/web/src/app/inventory/: page.tsx
NAME/apps/web/src/constants/: medicines.ts
NAME/apps/web/src/hooks/: useOfflineSync.ts
NAME/apps/web/src/services/: api.ts
NAME/apps/web/src/styles/: globals.css
NAME/database/: schema.sql
NAME/database/seed/: seed.sql
NAME/docs/: AI.md  API.md  Architecture.md  Database.md  Deployment.md  OfflineSync.md  Security.md  UserGuide.md
NAME/infrastructure/docker/: ai.Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
NAME/scripts/: simulate_scenario.py
(+8 files in other folders)
