[project]
name = "phc-exchange-api"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pg8000>=1.31.5",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
