[project]
name = "ai-service"
version = "0.1.0"
description = "PHC Exchange AI microservice for forecasting, NLP, and medicine matching"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pg8000>=1.31.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
